config/base/derive/tests/ui_fail/invalid_attrs_conflicts.stderr
error: attributes conflict: `nested` cannot be set with other attributes
 --> tests/ui_fail/invalid_attrs_conflicts.rs:5:14
  |
5 |     #[config(nested, default)]
  |              ^^^^^^

error: attributes conflict: `nested` cannot be set with other attributes
  --> tests/ui_fail/invalid_attrs_conflicts.rs:11:23
   |
11 |     #[config(default, nested)]
   |                       ^^^^^^
